syntax = "proto3";

option go_package = "./;pb";

message Regulation {
    string Name         = 1;
    string Abbreviation = 2;
    string Title        = 3;
}

message Paragraph {
    uint64 ID        = 1;
    uint64 Num       = 2;
    bool HasLinks    = 3;
    bool IsTable     = 4;
    bool IsNFT       = 5;
    string Class     = 6;
    string Content   = 7;
    uint64 ChapterID = 8;
}



message UpdateOneRequestMesssage {
    uint64 ID      = 1;
    string Content = 2;
}

message Paragraphs {
    repeated Paragraph Paragraphs = 1;
}

message Chapter {
    uint64 ID                     = 1;
    string Name                   = 2;
    string Num                    = 3;
    string RegulationID           = 4;
    string OrderNum               = 5;
    repeated Paragraph Paragraphs = 6;
    string UpdatedAt              = 7;
}

message ID {
    uint64 ID = 1;
}

message Status {
    string Status = 1;
}